Fix logo on Safari

--- a/src/css/components/_main-menu.scss
+++ b/src/css/components/_main-menu.scss
@@ -176,6 +176,11 @@
   background: #f3f3f3;
   font-size: 0.9rem;
 
+  .logo {
+    width: 100%;
+    height: auto;
+  }
+
   & h1 {
     font-size: inherit;
     margin: 0;
